# digitalmeve

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cli_generate.py  cli_verify.py  mkdocs.yml  pyproject.toml  requirements.txt  test_utils.py  test_verifier.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  quality.yml  smoke.yml  tests.yml
docs/: OFFICIAL.md  PRO.md  examples.md  generator-guide.md  index.md  overview.md  roadmap.md  security.md  specification.md  verification-guide.md
examples/: sample_contract.meve  sample_invoice.meve
github/workflows/: release.yml
src/: __init__.py  generator.py  utils.py  verifier.py
src/digitalmeve/: __init__.py  core.py  generator.py  utils.py  verifier.py
tests/: test_core.py  test_generator.py  test_smoke.py  test_utils.py  test_verifier.py  test_version.py
tests/tests/: test_smoke.py
