[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digitalmeve"
version = "1.7.0-dev"
description = "DigitalMeve — The .MEVE Standard (Certified Digital Memory)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "DigitalMeve Team", email = "support@digitalmeve.org" }
]
requires-python = ">=3.9"

dependencies = [
]

[project.urls]
Homepage = "https://github.com/BACOUL/digitalmeve"
Documentation = "https://github.com/BACOUL/digitalmeve#readme"
Repository = "https://github.com/BACOUL/digitalmeve"
Issues = "https://github.com/BACOUL/digitalmeve/issues"
